--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			
+		</dependency>
+		
 
 	</dependencies>
 
