--- a/soky-bot-api/pom.xml
+++ b/soky-bot-api/pom.xml
@@ -3,8 +3,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
-		<groupId>org.sokybot</groupId>
+
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
