--- a/soky-bot-packet-sniffer/pom.xml
+++ b/soky-bot-packet-sniffer/pom.xml
@@ -3,8 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-
-		<groupId>org.sokybot</groupId>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
@@ -15,7 +14,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-api</artifactId>
 		</dependency>
 	</dependencies>
