--- a/soky-bot-pk2-extractor/pom.xml
+++ b/soky-bot-pk2-extractor/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>org.sokybot</groupId>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -29,16 +29,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-pk2</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-security</artifactId>
 		</dependency>
 
@@ -55,13 +55,17 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-		
 		<dependency>
-			<groupId>io.vavr</groupId>
-			<artifactId>vavr</artifactId>
-			
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>4.8.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
+		<!-- <dependency> <groupId>io.vavr</groupId> <artifactId>vavr</artifactId> 
+			</dependency> -->
 
 	</dependencies>
 
