--- a/soky-bot-pk2/pom.xml
+++ b/soky-bot-pk2/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 
-		<groupId>org.sokybot</groupId>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
@@ -16,7 +16,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-security</artifactId>
 		</dependency>
 		<!-- 
