--- a/soky-bot-plugin-management/pom.xml
+++ b/soky-bot-plugin-management/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.sokybot</groupId>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -71,7 +71,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.sokybot</groupId>
+			<groupId>io.github.sokybot</groupId>
 			<artifactId>soky-bot-api</artifactId>
 		
 			<scope>provided</scope>
