--- a/soky-bot-security/pom.xml
+++ b/soky-bot-security/pom.xml
@@ -5,7 +5,7 @@
 
 
 	<parent>
-		<groupId>org.sokybot</groupId>
+		<groupId>io.github.sokybot</groupId>
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
