--- a/soky-bot-core/pom.xml
+++ b/soky-bot-core/pom.xml
@@ -7,38 +7,63 @@
 		<artifactId>soky-bot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	
-	
+
+
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>bundle</packaging>
 
 	<artifactId>soky-bot-core</artifactId>
 	<name>Sokybot Core Bundle</name>
 
+
+	<properties>
+		<dependency.spring-boot.version>2.7.0</dependency.spring-boot.version>
+		<dependency.spring-osgi-io.version>1.2.1</dependency.spring-osgi-io.version>
+		<dependency.spring-statemachine-core.version>3.2.0</dependency.spring-statemachine-core.version>
+		<dependency.flatlaf.version>2.3</dependency.flatlaf.version>
+		<dependency.flatlaf-swingx.version>2.3</dependency.flatlaf-swingx.version>
+		<dependency.h2.version>2.1.214</dependency.h2.version>
+		<dependency.h2-mvstore.version>2.1.214</dependency.h2-mvstore.version>
+		<dependency.objenesis.version>3.3</dependency.objenesis.version>
+	</properties>
+
+	<repositories>
+		<repository>
+		<id>sing-repository</id>
+		<name>SING repository</name>
+		<url>http://maven.sing-group.org/repository/maven/</url>
+	</repository>
+	</repositories>
+
 	<dependencies>
 
 
 		<dependency>
-			<groupId>org.sokybot</groupId>
-			<artifactId>gc4s</artifactId> <!-- Name of the GC4S module -->
+			<groupId>org.sing_group</groupId>
+			<artifactId>gc4s</artifactId>
+			<version>${dependency.gc4s.version}</version>
 		</dependency>
+
+		<!-- dependency> <groupId>org.sing_group</groupId> <artifactId>gc4s</artifactId> 
+			</dependency -->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
-			<version>2.7.0</version>
+			<version>${dependency.spring-boot.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-io</artifactId>
-			<version>1.2.1</version>
+			<version>${dependency.spring-osgi-io.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
 		<dependency>
 			<groupId>org.springframework.statemachine</groupId>
 			<artifactId>spring-statemachine-core</artifactId>
-			<version>3.2.0</version>
+			<version>${dependency.spring-statemachine-core.version}</version>
 		</dependency>
 
 		<dependency>
@@ -70,13 +95,13 @@
 		<dependency>
 			<groupId>com.formdev</groupId>
 			<artifactId>flatlaf-swingx</artifactId>
-			<version>2.3</version>
+			<version>${dependency.flatlaf-swingx.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.formdev</groupId>
 			<artifactId>flatlaf</artifactId>
-			<version>2.3</version>
+			<version>${dependency.flatlaf.version}</version>
 
 		</dependency>
 
@@ -106,14 +131,14 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>2.1.214</version>
+			<version>${dependency.h2.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.h2database/h2-mvstore -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2-mvstore</artifactId>
-			<version>2.1.214</version>
+			<version>${dependency.h2-mvstore.version}</version>
 		</dependency>
 
 		<dependency>
@@ -125,7 +150,8 @@
 		<dependency>
 			<groupId>org.objenesis</groupId>
 			<artifactId>objenesis</artifactId>
-			<version>3.3</version>
+
+			<version>${dependency.objenesis.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -159,7 +185,7 @@
 		</dependency>
 
 
-	
+
 
 		<dependency>
 			<groupId>io.github.sokybot.mydoggy</groupId>
@@ -173,7 +199,7 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>soky-bot-api</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>soky-bot-pk2-extractor</artifactId>
@@ -181,13 +207,7 @@
 
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>sing-repository</id>
-			<name>SING repository</name>
-			<url>http://maven.sing-group.org/repository/maven/</url>
-		</repository>
-	</repositories>
+
 
 	<build>
 
