--- a/sokybot-api/pom.xml
+++ b/sokybot-api/pom.xml
@@ -4,14 +4,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>soky-bot-api</artifactId>
+	<artifactId>sokybot-api</artifactId>
 	<packaging>bundle</packaging>
 	<name>sokybot-api</name>
 
