--- a/sokybot-core/pom.xml
+++ b/sokybot-core/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
@@ -12,7 +12,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>bundle</packaging>
 
-	<artifactId>soky-bot-core</artifactId>
+	<artifactId>sokybot-core</artifactId>
 	<name>Sokybot Core Bundle</name>
 
 
