--- a/sokybot-game-loader/pom.xml
+++ b/sokybot-game-loader/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.sokybot</groupId>
-    <artifactId>soky-bot</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>soky-bot-game-loader</artifactId>
+		<groupId>io.github.sokybot</groupId>
+		<artifactId>sokybot</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	
+  <artifactId>sokybot-game-loader</artifactId>
 </project>
