--- a/sokybot-launcher/pom.xml
+++ b/sokybot-launcher/pom.xml
@@ -4,13 +4,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>soky-bot-launcher</artifactId>
+	<artifactId>sokybot-launcher</artifactId>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
