--- a/sokybot-packet-sniffer/pom.xml
+++ b/sokybot-packet-sniffer/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
 	</parent>
 
-	<artifactId>soky-bot-packet-sniffer</artifactId>
+	<artifactId>sokybot-packet-sniffer</artifactId>
 
 
 	<dependencies>
