--- a/sokybot-pk2-extractor/pom.xml
+++ b/sokybot-pk2-extractor/pom.xml
@@ -4,12 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>soky-bot-pk2-extractor</artifactId>
+	<artifactId>sokybot-pk2-extractor</artifactId>
 	<packaging>bundle</packaging>
 
 	<dependencies>
