--- a/sokybot-pk2/pom.xml
+++ b/sokybot-pk2/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
 	</parent>
 
-	<artifactId>soky-bot-pk2</artifactId>
+	<artifactId>sokybot-pk2</artifactId>
 	<packaging>bundle</packaging>
 
 	<dependencies>
