--- a/sokybot-plugin-management/pom.xml
+++ b/sokybot-plugin-management/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>soky-bot-plugin-management</artifactId>
+	<artifactId>sokybot-plugin-management</artifactId>
 	<packaging>bundle</packaging>
 
 
