--- a/sokybot-security/pom.xml
+++ b/sokybot-security/pom.xml
@@ -6,11 +6,11 @@
 
 	<parent>
 		<groupId>io.github.sokybot</groupId>
-		<artifactId>soky-bot</artifactId>
+		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 
 	</parent>
-	<artifactId>soky-bot-security</artifactId>
+	<artifactId>sokybot-security</artifactId>
 	<packaging>bundle</packaging>
 
 	<dependencies>
