--- a/pom.xml
+++ b/pom.xml
@@ -156,16 +156,28 @@
 	</dependencyManagement>
 
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>maven-bundle-plugin</artifactId>
-					<version>${plugin.bundle.version}</version>
-					<extensions>true</extensions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+
+		<plugins>
+
+			<!-- This plugin is responsible to build bundle modules -->
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${plugin.bundle.version}</version>
+
+				<configuration>
+					<instructions>
+						<Embed-Dependency>
+							*;scope=compile;inline=true
+						</Embed-Dependency>
+						<Embed-Transitive>
+							true
+						</Embed-Transitive>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+
 	</build>
 
 	<profiles>
@@ -293,7 +305,7 @@
 			<version>7.0.5</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.service.component</artifactId>
