--- a/sokybot-core/pom.xml
+++ b/sokybot-core/pom.xml
@@ -10,14 +10,14 @@
 
 
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	<artifactId>sokybot-core</artifactId>
 	<name>Sokybot Core Bundle</name>
 
 
 	<properties>
-		<dependency.spring-boot.version>2.7.0</dependency.spring-boot.version>
+		<spring-boot.version>2.7.0</spring-boot.version>
 		<dependency.spring-osgi-io.version>1.2.1</dependency.spring-osgi-io.version>
 		<dependency.spring-statemachine-core.version>3.2.0</dependency.spring-statemachine-core.version>
 		<dependency.flatlaf.version>2.3</dependency.flatlaf.version>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>${spring-boot.version}</version>
 
 			<exclusions>
 				<exclusion>
@@ -157,12 +157,12 @@
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli-spring-boot-starter</artifactId>
 			<version>4.6.3</version>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework.boot</groupId> -->
-<!-- 					<artifactId>spring-boot-starter-logging</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
+			<!-- <exclusions> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.springframework.boot</groupId> -->
+			<!-- <artifactId>spring-boot-starter-logging</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- </exclusions> -->
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
@@ -204,7 +204,7 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.fileinstall</artifactId>
 			<version>3.7.4</version>
-			
+
 		</dependency>
 
 	</dependencies>
@@ -218,88 +218,22 @@
 
 
 		<plugins>
-
-
-
 			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot.version}</version>
 				<configuration>
-					<instructions>
-						<Bundle-Activator>org.sokybot.Driver</Bundle-Activator>
-
-						<Import-Package>
-							!org.springframework.*,
-							*;resolution:=optional
-						</Import-Package>
-						<Embed-Dependency>
-							*;scope=compile;inline=true
-						</Embed-Dependency>
-						<Embed-Transitive>
-							true
-						</Embed-Transitive>
-
-					</instructions>
-
-
+					<mainClass>org.sokybot.Driver</mainClass>
 
 				</configuration>
-
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.maven.plugins</groupId> -->
-			<!-- <artifactId>maven-assembly-plugin</artifactId> -->
-			<!-- <version>2.2-beta-5</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <phase>package</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>single</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <finalName>${project.name}</finalName> -->
-			<!-- <outputDirectory>${project.parent.basedir}/out</outputDirectory> -->
-			<!-- <appendAssemblyId>false</appendAssemblyId> -->
-			<!-- <descriptorRefs> -->
-			<!-- <descriptorRef>jar-with-dependencies</descriptorRef> -->
-			<!-- </descriptorRefs> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
-
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.felix</groupId> -->
-			<!-- <artifactId>maven-bundle-plugin</artifactId> -->
-			<!-- <version>5.1.4</version> -->
-			<!-- <extensions>true</extensions> -->
-
-			<!-- <configuration> -->
-			<!-- <instructions> -->
-			<!-- <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency> -->
-			<!-- <Embed-Transitive>true</Embed-Transitive> -->
-			<!-- <_nouses>false</_nouses> -->
-			<!-- <_noee>false</_noee> -->
-			<!-- <Bundle-Activator>org.sokybot.Driver</Bundle-Activator> -->
-			<!-- <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName> -->
-			<!-- <Import-Package>org.sokybot.api</Import-Package> -->
-			<!-- <Import-Package>org.osgi.framework.*</Import-Package> -->
-			<!-- <Import-Package> -->
-			<!-- !org.springframework.*, -->
-			<!-- *;resolution:=optional -->
-			<!-- </Import-Package> -->
-			<!-- <Export-Package>org.sokybot</Export-Package> -->
-			<!-- </instructions> -->
-
-			<!-- <buildDirectory>${sokybot-product-dir}/system</buildDirectory> -->
-
-
-			<!-- </configuration> -->
-			<!-- <executions> <execution> <id>bundle-manifest</id> <phase>process-classes</phase> -->
-			<!-- <goals> <goal>manifest</goal> </goals> </execution> </executions> -->
-			<!-- </plugin> -->
 
 
 		</plugins>
