--- a/sokybot-core/pom.xml
+++ b/sokybot-core/pom.xml
@@ -205,6 +205,13 @@
 			<artifactId>vavr</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.felix/org.apache.felix.atomos -->
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.atomos</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.fileinstall</artifactId>
