--- a/sokybot-game-loader/pom.xml
+++ b/sokybot-game-loader/pom.xml
@@ -1,11 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
 		<groupId>io.github.sokybot</groupId>
 		<artifactId>sokybot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	
-  <artifactId>sokybot-game-loader</artifactId>
-  <packaging>bundle</packaging>
+
+	<artifactId>sokybot-game-loader</artifactId>
+	<packaging>bundle</packaging>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>io.github.sokybot</groupId>
+			<artifactId>sokybot-api</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>5.12.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform -->
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+			<version>5.12.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.kichik.pecoff4j/pecoff4j -->
+		<dependency>
+			<groupId>com.kichik.pecoff4j</groupId>
+			<artifactId>pecoff4j</artifactId>
+			<version>0.3.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.sun.jna/jna -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.sun.jna</groupId> -->
+		<!-- <artifactId>jna</artifactId> -->
+		<!-- <version>3.0.9</version> -->
+		<!-- </dependency> -->
+	</dependencies>
+
 </project>
